--- a/public/styles/normalize.css
+++ b/public/styles/normalize.css
@@ -292,6 +292,7 @@ html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button; /* 2 */
+  appearance: button;
   cursor: pointer; /* 3 */
 }
 
@@ -355,6 +356,7 @@ input[type="number"]::-webkit-outer-spin-button {
  */
 
 input[type="search"] {
+  appearance: textfield;
   -webkit-appearance: textfield; /* 1 */
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box; /* 2 */
