start problems removed

--- a/public/styles/skeleton.css
+++ b/public/styles/skeleton.css
@@ -8,7 +8,7 @@
 */
 
 /*
-* Edited for the Terpstra Keyboard WebApp v. 0.1
+* Edited for the Temper v. 0.1
 * http://terpstrakeyboard.com/play-it-now/keys.htm
 */
 
